--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - run: |
-          echo "env.buildVersion1=1.0.0.0" >> $GITHUB_ENV
-          echo "buildVersion2=2.0.0.0" >> $GITHUB_ENV
+          $b1 = "1.0.0.0"
+          $b2 = "2.0.0.0"
+          echo "env.buildVersion1=$b1" >> $GITHUB_ENV
+          echo "buildVersion2=$b2" >> $GITHUB_ENV
+          
+      - run: |
           echo ${{env.buildVersion}}
           echo ${{env.buildVersion1}}
           echo ${{env.buildVersion2}}
-
