--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,10 @@ jobs:
           echo "buildVersion=1.2.3" >> $GITHUB_ENV
           echo "buildVersion1=1.0.0.0" >> $GITHUB_ENV
           echo "buildVersion2=2.0.0.0" >> $GITHUB_ENV
+          echo ${{env.buildVersion}}
+          echo ${{env.buildVersion1}}
+          echo ${{env.buildVersion2}}
+        shell: pwsh
       - run: |
           echo ${{env.buildVersion}}
           echo ${{env.buildVersion1}}
